fixed aside bottom alignment

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ aside {
     width: 445px;
     padding-top: 30px;
     background: #ebebeb;
-    height: 240px;
+    height: 230px;
 }
 
 footer {
